# dawn-secure-transport

./: .gitattributes  Cargo.toml  FUTURE_RESILIENCE.md  PROTOCOLS.md  README.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULLREQUESTTEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: architecture_change.md  bug_report.yml  config.yml  feature_request.md  module_update.md
.github/workflows/: ci.yml  lint.yml  security.yml
architecture/: README.md  ai-routing-architecture.md  ai-routing.md  amalgamated-protocols.md  crypto-and-future-extensions.md  data-flow.md  deployment-models.md  future-extensions.md  node-discovery-architecture.md  node-discovery.md  overview.md  protocol-integration.md  rutl.md  security-design.md  security-review.md  source-protocols.md  threat-model.md  transport-architecture.md
crates/: README.md
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/rutl/: mod.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: lib.rs
crates/crypto/src/primitives/: mod.rs
crates/discovery/: Cargo.toml  README.md
crates/discovery/src/: lib.rs
crates/discovery/src/channels/: mod.rs
crates/transports/: Cargo.toml  README.md
crates/transports/src/: lib.rs
crates/transports/src/framework/: mod.rs
docs/: README.md  censorship-landscape.md  connectivity-landscape.md  contributor-guide.md  design-decisions.md  glossary.md  research-notes.md  security-considerations.md
docs/protocols/: README.md  RUTL.md  ruxpv.md  ruxsv.md  ruxvv.md  source-protocols.md
examples/: README.md
modules/: README.md
modules/ai-routing/: README.md
modules/node-discovery/: README.md
modules/transport-framework/: README.md
roadmap/: README.md  deliverables.md  milestones.md  timeline.md
scripts/: README.md  security-audit.sh  setup-dev.sh  workspace-check.sh
tests/: README.md
