[workspace]  
members = [  
    "crates/core",  
    "crates/transport",  
    "crates/discovery",  
    "crates/routing",  
]  

resolver = "2"  

[workspace.package]  
edition = "2021"  
license = "AGPL-3.0"  
authors = ["Dawn Infra Labs"]  
description = "Secure and privacy-preserving multi-transport framework with heuristic routing."  

[workspace.dependencies]  
tokio = { version = "1", features = ["full"] }  
anyhow = "1"  
thiserror = "1"  
serde = { version = "1", features = ["derive"] }  
serde_json = "1"  
tracing = "0.1"  
tracing-subscriber = "0.3"
