[workspace]
members = [
    "crates/core",
    "crates/crypto",
    "crates/discovery",
    "crates/transports",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0"
authors = ["Dawn Infra Labs"]
description = "Modular, security-focused, privacy-preserving communication framework built on the Rust Unified Transport Layer (RUTL)."

[workspace.dependencies]
# Core async and error handling
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"  # Required for async trait definitions in the current Rust toolchain

# Serialization and logging
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
